# Agentic-Coding-Memory

./: .gitignore  AGENTS.MD  AMP_Semantic_Cache_and_Episodic_Memory.md  CLAUDE.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  README.md  Unified_Agentic_Memory_White_Paper-Detail.md  agent_memory_protocol_amp_hackathon_specification.md  amp-cache-sync-edit-design.md  build-cli.ps1  check-relationships.sql  clear-db-direct.ps1  config.json  install.ps1  install.sh  package-lock.json  package.json  test-analytics.sh
.agents/code-reviews/: amp-crud-implementation-2026-01-14.md  amp-implementation-review.md  fixes-2026-01-14.md  mcp-integration-review-2026-01-18.md
.agents/fixes/: SUMMARY.md  graph-traversal-inbound-fix.md  mcp-integration-fixes-2026-01-18.md
.agents/implementation/: embedding-integration.md
.agents/plans/: 3d-force-graph-integration.md  amp-bridge-terminal-tui.md  amp-directory-indexing-command.md  amp-mcp-server-integration.md  application-level-multi-hop-logic.md  cyberpunk-tauri-3d-knowledge-graph.md  extend-tree-sitter-language-support.md  extract-project-name-codebase-parser.md  filechunk-filelog-compilation-fixes.md  filechunk-filelog-complete.md  filechunk-filelog-implementation-report.md  filechunk-filelog-integration.md  hybrid-retrieval-system.md  implement-graph-relationships.md  implement-lease-coordination.md  implement-query-endpoint.md  implement-semantic-cache-unity-layer.md  implement-update-delete-endpoints.md  implement-vector-embeddings.md  multi-hop-graph-traversal.md  real-server-database-analytics.md
.agents/summaries/: graph-traversal-complete.md
.claude/: settings.local.json
.claude/skills/: INSTRUCTIONS.md
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
SKILLS/: AGENTS.md  INSTRUCTIONS.md  README.md
SKILLS/amp-core/: SKILL.md
amp/: .gitignore  CODEBASE_PARSER.md  Cargo.toml  DEVELOPMENT.md  DEVLOG.md  EMBEDDINGS.md  README.md  STATUS.md  TASKS.md  build-and-test.ps1  docker-compose.yml  task.md  test-build.sh  test_parser_fix.py
amp/SKILLS/: INSTRUCTIONS.md  README.md
amp/cli/: .gitignore  .npmignore  Cargo.toml  README.md  package.json
amp/cli/src/: app.rs  client.rs  config.rs  git.rs  main.rs  process.rs  session.rs
amp/cli/src/commands/: clear.rs  history.rs  index.rs  index_ui.rs  mod.rs  query.rs  start.rs  status.rs  tui.rs
amp/cli/src/ui/: layout.rs  mod.rs  session_view.rs  status_bar.rs
amp/cli/tests/: integration.rs  test_index.rs
amp/cli/tests-scripts/: install.js  test-npm-package.ps1  test-npm-package.sh  uninstall.js
amp/examples/: hybrid_query_examples.surql  multi_hop_examples.surql  multi_hop_traversal_examples.surql  python_basic.py  typescript_basic.ts
amp/mcp-server/: .env.example  Cargo.toml  Dockerfile  INTEGRATION.md  README.md
amp/mcp-server/src/: amp_client.rs  config.rs  main.rs
amp/mcp-server/src/tools/: cache.rs  context.rs  coordination.rs  discovery.rs  files.rs  focus.rs  memory.rs  mod.rs  query.rs
amp/scripts/: FIXES.md  README.md  debug-multi-hop.ps1  demo.sh  dev-setup.sh  generate-sdks.sh  run-all-tests.ps1  run-all-tests.sh  test-chunking.ps1  test-codebase-parser.ps1  test-codebase-parser.sh  test-crud.ps1  test-crud.sh  test-embeddings-comprehensive.ps1  test-embeddings.ps1  test-external-db.ps1  test-filelog.ps1  test-graph-traversal.ps1  test-hybrid-retrieval.ps1  test-hybrid-simple.ps1  test-leases.ps1  test-mcp-fixes.ps1  test-mcp-fixes.sh  test-multi-hop-fixed.ps1  test-multi-hop-full.ps1  test-multi-hop-logic.ps1  test-multi-hop-simple.ps1  test-multi-hop-traversal.ps1  test-multi-hop-validation.ps1  test-query.ps1  test-relationship-debug.ps1  test-relationship-simple.ps1  test-relationships.ps1  test-rest-cache-read.ps1  test-schemas.sh  test-simple.ps1  test-ts.ps1  test-update-delete.ps1  test-validation-simple.ps1  test-vector-search.ps1  (+2 more)
amp/server/: .env.example  Cargo.toml  Dockerfile  run-server.sh
amp/server/src/: config.rs  database.rs  main.rs  surreal_json.rs
amp/server/src/handlers/: analytics.rs  artifacts.rs  cache.rs  codebase.rs  connections.rs  focus.rs  leases.rs  mod.rs  objects.rs  query.rs  relationships.rs  settings.rs  trace.rs
amp/server/src/models/: analytics.rs  mod.rs  relationships.rs  settings.rs
amp/server/src/services/: analytics.rs  cache.rs  chunking.rs  codebase_parser.rs  embedding.rs  filelog_generator.rs  graph.rs  hybrid.rs  index_llm.rs  mod.rs  settings.rs  storage.rs
amp/server/src/services/embedding/: none.rs  ollama.rs  openai.rs
amp/spec/: example_queries.surql  multi-language-parser-plan.md  openapi.yaml  schema.surql
amp/ui/: DESIGN.md  README.md  create-icons.bat  create-icons.ps1  create-minimal-icon.sh  create-proper-icon.sh  create-square-icon.sh  index.html  package-lock.json  package.json  tailwind.config.js  test-implementation.sh  vite.config.ts
amp/ui/src-tauri/: Cargo.toml  tauri.conf.json
amp/ui/src-tauri/icons/: icon.icns
amp/ui/src-tauri/src/: amp_client.rs  commands.rs  main.rs
devdocs/: AMP-MCP-SERVER-IMPLEMENTATION.md  CLI-USAGE.md  HACKATHON_CODE_REVIEW.md  PRD.md  TASKS.md  TESTING.md  tree_sitter_languages.md
devdocs/post-hackathon/: AMP_LIBRARY_ROADMAP.md
docs/: AMP-INDEX-IMPLEMENTATION-REPORT.md  AMP-MCP-SERVER-IMPLEMENTATION.md  AMP_Codebase_Embedding_and_Graph_Strategy.md  AMP_SKILLS_REVIEW.md  CLI-USAGE.md  README.md  amp-session-lifecycle.md
docs/api/: overview.md
docs/concepts/: hybrid-retrieval.md  what-is-amp.md
docs/getting-started/: installation.md  quick-start.md
docs/post-hackathon/: AMP_LIBRARY_ROADMAP.md
scripts/: build-cli.sh  build-mcp-server.ps1  build-mcp-server.sh  clear-db-direct.sh  delete-all-artifacts.ps1  import-test-artifacts.ps1  install.ps1  start-desktop.bat  start-desktop.sh  start-ui.sh  test-cli.ps1  test-index-implementation.sh  test-nuclear-delete.ps1  test-parser.ps1  test-server.sh  test-ui-fix.sh  verify-implementation.sh
sql/: check-surreal-direct.sql
test-repo/: README.md
test-repo/artifacts/: README.md  changesets.json  decisions.json  filelogs.json  notes.json
test-repo/c/: sample.c
(+78 files in other folders)
