[package]
name = "amp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.0"
md5 = "0.7"
sha2 = "0.10"
dotenvy = "0.15"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
