[package]
name = "amp-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amp-mcp-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# MCP SDK - using streamable HTTP transport (SSE successor in 0.13.0)
rmcp = { version = "0.13.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"

# For HTTP transport (included by rmcp but needed for our router)
axum = "0.8"

# HTTP client for AMP API
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
