[package]
name = "amp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

surrealdb = { version = "2.4", features = ["kv-mem", "kv-rocksdb", "protocol-ws", "protocol-http"] }

# HTTP client for embeddings
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
dotenvy = "0.15"

# Tree-sitter for code parsing
tree-sitter = "0.20"

# Phase 1 - Core languages
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-rust = "=0.20.1"
tree-sitter-go = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-ruby = "0.20"

# Phase 2 & 3 - Commented out due to cc/ring dependency conflict with surrealdb
# These use older cc versions incompatible with ring 0.17.13
# tree-sitter-bash = "0.20"
# tree-sitter-json = "0.19"
# tree-sitter-html = "0.20"
# tree-sitter-css = "0.20"

# File system operations
walkdir = "2.0"
sha2 = "0.10"
hex = "0.4"

# System metrics
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.0"
